# open_manipulator_p_perceptions

./: .travis.yml  README.md
open_manipulator_p_ar_markers/: CMakeLists.txt  package.xml
open_manipulator_p_ar_markers/launch/: ar_pose.launch
open_manipulator_p_camera/: CMakeLists.txt  package.xml
open_manipulator_p_camera/camera_info/: astra_pro.yaml
open_manipulator_p_camera/launch/: raspicam.launch
open_manipulator_p_perceptions/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_pick_and_place/: CMakeLists.txt  package.xml
open_manipulator_p_pick_and_place/include/open_manipulator_p_pick_and_place/: open_manipulator_p_pick_and_place.h
open_manipulator_p_pick_and_place/launch/: open_manipulator_p_pick_and_place.launch
open_manipulator_p_pick_and_place/src/: open_manipulator_p_pick_and_place.cpp
