<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p_camera</name>
  <version>0.1.1</version>
  <description>
    This packages includes some camera launch files
  </description>

  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_perceptions</url>
  <url type="website">http://emanual.robotis.com/docs/en/platform/openmanipulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>image_proc</depend>
</package>
